# Pandora-Summarizer

./: .gitignore  DESIGN.md  FIELD-CHECKLIST.txt  INSTALL-ON-PANDORA.md  README.md  Run-Pandora-Now.bat  Run-Setup.bat  Run-Uninstall.bat  pyproject.toml  setup.ps1  teardown.ps1
config/: config.example.yaml
dashboard/: app.py  config.py
dashboard/routes/: _helpers.py  export.py  fleet.py  instrument.py  reports.py
dashboard/services/: __init__.py  fleet_aggregator.py  gcs_reader.py  summary_loader.py
dashboard/static/: style.css
dashboard/templates/: _macros.html  base.html  fleet.html  instrument.html  report.html
docs/: deployment.md  runbook.md  troubleshooting.md  windows-quickstart.md  windows-service-guide.md
docs/examples/: summary.json
edge_service/pandora_edge/: __main__.py  cli.py  config.py  logging_setup.py  orchestrator.py
edge_service/pandora_edge/gcs/: __init__.py  uploader.py
edge_service/pandora_edge/health/: __init__.py  rules.py  scoring.py
edge_service/pandora_edge/parsers/: __init__.py  alignment_parser.py  file_inventory_parser.py  l0_parser.py  log_parser.py  status_line_parser.py
edge_service/pandora_edge/service/: __init__.py  install.ps1  uninstall.ps1  windows_task.py
edge_service/pandora_edge/state/: __init__.py  db.py  models.py
edge_service/pandora_edge/steps/: __init__.py  build_summary.py  locate_files.py  parse_alignment.py  parse_l0_status.py  parse_logs.py  stage_bundle.py  upload_gcs.py
installer/: install-service.ps1  install.ps1  uninstall.ps1
src/pandora_summarizer/: __main__.py  config.py  logging_setup.py  orchestrator.py
src/pandora_summarizer/gcs/: __init__.py  uploader.py
src/pandora_summarizer/parsers/: __init__.py  l0_parser.py
src/pandora_summarizer/state/: __init__.py  db.py  models.py
src/pandora_summarizer/steps/: __init__.py  build_summary.py  collect_alignment.py  collect_figures.py  generate_l1.py  locate_l0.py
tests/: conftest.py
tests/dashboard/: conftest.py  test_fleet_aggregator.py  test_routes.py  test_summary_loader.py
tests/edge_service/: test_config.py  test_smoke.py  test_state_db.py
tests/edge_service/health/: test_rules.py  test_scoring.py
tests/unit/: test_config.py  test_locate_l0.py  test_orchestrator.py  test_state_db.py
(+6 files in other folders)
