[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pandora-summarizer"
version = "0.1.0"
description = "Daily uploader for Pandora instrument data products to GCS"
requires-python = ">=3.11"
authors = [{ name = "PGN Operations" }]
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "google-cloud-storage>=2.16",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
pandora-summarizer = "pandora_summarizer.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
