[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pandora-fleet-monitor"
version = "0.2.0"
description = "Edge service + read-only web dashboard for Pandora instrument fleet monitoring"
requires-python = ">=3.11"
authors = [{ name = "PGN Operations" }]
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "google-cloud-storage>=2.16",
    "tenacity>=8.2",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
]
windows = [
    "pywin32>=306; sys_platform == 'win32'",
]

[project.scripts]
pandora-edge = "pandora_edge.__main__:main"
pandora-dashboard = "dashboard.app:main"

[tool.setuptools.packages.find]
where = ["edge_service", "."]
include = ["pandora_edge*", "dashboard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "unit: unit tests",
    "integration: integration tests",
]
pythonpath = ["edge_service", "."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["edge_service", "dashboard"]
